# storage/api-docs/api-docs.json
@@ -23,12 +23,80 @@
                 "summary": "Login User",
                 "description": "Returns sesion",
                 "operationId": "login",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "email"
+                        }
+                    },
+                    {
+                        "name": "password",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successful operation"
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "422": {
+                        "description": "Fail"
+                    }
+                }
+            }
+        },
+        "/login-wallet": {
+            "post": {
+                "tags": [
+                    "Login Wallet"
+                ],
+                "summary": "Login Wallet",
+                "description": "Returns sesion wallett",
+                "operationId": "loginWallet",
+                "parameters": [
+                    {
+                        "name": "key",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "type",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "email",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "email"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "404": {
+                        "description": "User not exist"
                     },
                     "401": {
                         "description": "Unauthenticated"
@@ -47,6 +115,40 @@
                 "summary": "Register User",
                 "description": "Returns sesion",
                 "operationId": "register",
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "email",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "email"
+                        }
+                    },
+                    {
+                        "name": "password",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "password_confirmation",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Successful operation"
@@ -56,6 +158,53 @@
                     },
                     "403": {
                         "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/save-key": {
+            "post": {
+                "tags": [
+                    "Save Key"
+                ],
+                "summary": "Save Wallet Key",
+                "description": "Returns sesion wallet",
+                "operationId": "saveKey",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "email"
+                        }
+                    },
+                    {
+                        "name": "type",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "key",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "User not exist"
                     }
                 }
             }
@@ -95,11 +244,11 @@
                 "operationId": "userProfile",
                 "parameters": [
                     {
-                        "name": "id",
+                        "name": "token",
                         "in": "path",
                         "required": true,
                         "schema": {
-                            "type": "integer"
+                            "type": "string"
                         }
                     }
                 ],
@@ -119,6 +268,61 @@
                 }
             }
         },
+        "/edit-profile": {
+            "put": {
+                "tags": [
+                    "User Profile"
+                ],
+                "summary": "Update user information",
+                "description": "Return user update",
+                "operationId": "editProfile",
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "path",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "email",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "email"
+                        }
+                    },
+                    {
+                        "name": "password",
+                        "in": "path",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "telegram",
+                        "in": "path",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User profile update successfully"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "User profile not found"
+                    }
+                }
+            }
+        },
         "/createnewtoken": {
             "post": {
                 "summary": "Create new token",
@@ -126,6 +330,78 @@
                 "responses": {
                     "201": {
                         "description": "Successful operation"
+                    }
+                }
+            }
+        },
+        "/change-password": {
+            "post": {
+                "tags": [
+                    "Reset Password Email"
+                ],
+                "summary": "Change password",
+                "description": "Returns a message change password",
+                "operationId": "passwordResetProcess",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "email"
+                        }
+                    },
+                    {
+                        "name": "token",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "password",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Password has been updated"
+                    },
+                    "422": {
+                        "description": "Either your email or token is wrong"
+                    }
+                }
+            }
+        },
+        "/reset-password-request": {
+            "post": {
+                "tags": [
+                    "Reset Password Email"
+                ],
+                "summary": "Sent a link to reset email",
+                "description": "Returns a link email",
+                "operationId": "sendPasswordResetEmail",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "email"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Check your inbox, we have sent a link to reset email"
+                    },
+                    "404": {
+                        "description": "Email does not exist"
                     }
                 }
             }
